--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
 - type: web
   name: django-quick-start
   env: python
-  plan: starter
+  plan: free
   buildCommand: ./build.sh
   startCommand: gunicorn config.wsgi:application
   autoDeploy: false
